# dhttp

./: Cargo.toml  README.md
examples/: body.rs  error.rs  fileserver.rs  redirect.rs  router.rs  simple.rs  sse.rs
src/: h1.rs  lib.rs  prelude.rs  server.rs
src/core/: connection.rs  error.rs  errorhandler.rs  logger.rs  mod.rs  service.rs
src/reqres/: body.rs  file.rs  mod.rs  req.rs  res.rs  sse.rs  status_code.rs  url.rs
src/service/: defaultservice.rs  files.rs  mod.rs  redirect.rs  router.rs
src/services/: defaultservice.rs  errorpage.rs  files.rs  log.rs  mod.rs  router.rs
src/util/: escape.rs  future.rs  hex.rs  httpdate.rs  mod.rs  path.rs
