[package]
name = "dhttp"
version = "0.1.0"
edition = "2024"

authors = ["Neltharion01"]
license = "MIT OR Apache-2.0"
description = "The best web framework"
readme = "README.md"
repository = "https://github.com/Neltharion01/dhttp"
keywords = ["http", "web"]

[dependencies]
may = "0.3"

chrono_lite = { git = "https://github.com/Neltharion01/chrono_lite" }
percent_encoding_lite = { git = "https://github.com/Neltharion01/percent_encoding_lite" }
blake3_lite = { git = "https://github.com/Neltharion01/blake3_lite" }

[dev-dependencies]
indoc = "2.0" # examples/fileserver.rs
